--- a/app/assets/stylesheets/some.scss
+++ b/app/assets/stylesheets/some.scss
@@ -1,3 +1,15 @@
 // Place all the styles related to the Some controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+table.table.multTable tr:nth-of-type(1) {
+  text-align: center;
+  font-weight: bold;
+  background-color: gray !important
+}
+
+table.table.multTable tr > td:nth-of-type(1){
+  text-align: center;
+  font-weight: bold;
+  background-color: gray
+}
