--- a/app/views/two/index.html.erb
+++ b/app/views/two/index.html.erb
@@ -1,2 +1,52 @@
-<h1>Two#index</h1>
-<p>Find me in app/views/two/index.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      
+      <h1>Two#index</h1>
+      <p>Find me in app/views/two/index.html.erb</p>
+      
+      <div class="panel panel-default">
+        <div class="panel-body">
+          <h2>Один</h2>
+          <div>
+            <p>Исходный массив</p>
+            <p><code><%= @names =%></code></p>
+
+            <p>Индекс вхождений</p>
+            <p>
+              <% @names.map.with_index do |name, index|  %>
+                <% if name == 'Вася' %>
+                  <code><%= index =%></code>
+                <% end %>
+              <% end %>
+            </p>
+
+            <p>Остается один Вася</p>
+            <p><code><%= @names.uniq =%></code></p>
+
+            <p>Вась не остается</p>
+            <p><code> <%= @names.delete('Вася') =%></code></p>
+
+            <p>Сортировка</p>
+            <p><code><%= @names.sort =%></code></p>
+            <p><code><%= @names.sort { |x, y| y <=> x }=%></code></p>
+
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+<div class="row">
+  <div class="col-md-12">
+    <div class="panel panel-default">
+      <div class="panel-body">
+        <h2>Два</h2>
+
+      </div>
+    </div>
+  </div>
+</div>
+
+</div>
