--- a/app/views/two/index.html.erb
+++ b/app/views/two/index.html.erb
@@ -38,40 +38,64 @@
     </div>
   </div>
 
-<div class="row">
-  <div class="col-md-12">
-    <div class="panel panel-default">
-      <div class="panel-body">
-        <h2>Два</h2>
-        <p>Исходный массив</p>
-        <p>
-          <% @users.each do |user| %>
-            <code><%= user[:lastName] =%> <%= user[:role] =%></code>
-          <% end %>
-        </p>
-        <p>Сортировка. Сначала одмены, потом юзеры</p>
-        <p>
-          <% @users.sort_by { |user| user[:role] }.each do |user| %>
-            <code><%=  user[:lastName ] =%></code>
-          <% end %>
-        </p>
-        
-        <p>Разбиение массива</p>
-        <p>
-          <% @admins.each do |admin| %>
-            <code><%= admin[:lastName] =%> <%= admin[:role] =%></code>
-          <% end %>
-        </p>
-        <p>
-          <% @notadmins.each do |notadmin| %>
-            <code><%= notadmin[:lastName] =%> <%= notadmin[:role] =%></code>
-          <% end %>
-        </p>
+  <div class="row">
+    <div class="col-md-12">
+      <div class="panel panel-default">
+        <div class="panel-body">
+          <h2>Два</h2>
+          <p>Исходный массив</p>
+          <p>
+            <% @users.each do |user| %>
+              <code><%= user[:lastName] =%> <%= user[:role] =%></code>
+            <% end %>
+          </p>
+          <p>Сортировка. Сначала одмены, потом юзеры</p>
+          <p>
+            <% @users.sort_by { |user| user[:role] }.each do |user| %>
+              <code><%=  user[:lastName ] =%></code>
+            <% end %>
+          </p>
 
+          <p>Разбиение массива</p>
+          <p>
+            <% @admins.each do |admin| %>
+              <code><%= admin[:lastName] =%> <%= admin[:role] =%></code>
+            <% end %>
+          </p>
+          <p>
+            <% @notadmins.each do |notadmin| %>
+              <code><%= notadmin[:lastName] =%> <%= notadmin[:role] =%></code>
+            <% end %>
+          </p>
+
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-12">
+      <div class="panel panel-default">
+        
+        <div class="panel-heading">
+          <h3>Три</h3>
+        </div>
+        
+        <div class="panel-body">    
+          <% @countries.each do |country| %>  
+            <% country.map do |key, value| %>
+              <p>
+                <div class="panel panel-warning">
+                  <div class="panel-heading"><%= key =%></div>
+                <div class="panel-body"><%= value.join(', ') =%></div>
+              </div>
+              </p>
+            <% end %>
+          <% end %>
+        </div>
 
       </div>
     </div>
   </div>
-</div>
 
 </div>
