Add template for lab three

--- a/app/views/three/index.html.erb
+++ b/app/views/three/index.html.erb
@@ -1,2 +1,22 @@
-<h1>Three#index</h1>
-<p>Find me in app/views/three/index.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-xl-12 bg-info">
+      <div class="three" >
+
+        <h1>Three#index <span class="label label-warning">В процессе</span></h1>
+        <p>Find me in app/views/three/index.html.erb</p>
+
+        <div class="well well-sm"> 1 задание</div>
+        <div class="well well-sm"> 2 задание</div>
+        <div class="well well-sm"> 3 задание</div>
+        <div class="well well-sm"> 4 задание</div>
+        <div class="well well-sm"> 5 задание</div>
+        <div class="well well-sm"> 6 задание</div>
+        <div class="well well-sm"> 7 задание</div>
+
+      </div>
+
+
+    </div>
+  </div>
+</div>
