--- a/app/views/two/index.html.erb
+++ b/app/views/two/index.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-12">
       
-      <h1>Two#index</h1>
+      <h1>Two#index <span class="label label-warning">В процессе</span></h1>
       <p>Find me in app/views/two/index.html.erb</p>
       
       <div class="panel panel-default">
