--- a/app/assets/stylesheets/three.scss
+++ b/app/assets/stylesheets/three.scss
@@ -1,3 +1,8 @@
 // Place all the styles related to the three controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.three {
+  margin-top: 50px ;
+  padding: 50px ;
+}
