--- a/app/views/two/index.html.erb
+++ b/app/views/two/index.html.erb
@@ -98,4 +98,17 @@
     </div>
   </div>
 
+  <div class="row">
+    <div class="col-lg-12">
+      <table class="table table-bordered">
+        <%@employees.map.with_index do |employee, index| %>
+          <tr>
+            <%employee.each do |key, value|%>
+              <td><%= value%></td>
+            <% end%>
+          </tr>
+        <%end%>
+      </table>
+    </div>
+  </div>
 </div>
