--- a/app/views/two/index.html.erb
+++ b/app/views/two/index.html.erb
@@ -100,6 +100,13 @@
 
   <div class="row">
     <div class="col-lg-12">
+      <div class="panel panel-default">
+
+        <div class="panel-heading">
+          <h3>Четыре</h3>
+        </div>
+
+        <div class="panel-body">
       <table class="table table-bordered">
         <%@employees.map.with_index do |employee, index| %>
           <tr>
@@ -109,6 +116,9 @@
           </tr>
         <%end%>
       </table>
+        </div>
+
+      </div>
     </div>
   </div>
 </div>
