--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Bloh</title>
+    <title>Labs</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -10,6 +10,60 @@
   </head>
 
   <body>
+      <nav class="navbar navbar-default" role="navigation">
+          <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                  </button>
+                <%= link_to 'My Blog', test_test_url, { :class=>"navbar-brand" } %>
+                
+            </div>
+        
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+              <ul class="nav navbar-nav">
+                <% if (request.fullpath == '/one/index') %>
+                  <% root_path %>
+                    <li class='active' >
+                      <%= link_to 'One', one_index_url %>
+                    </li> 
+                  <% else %>
+                    <li >
+                      <%= link_to 'One', one_index_url %>
+                    </li> 
+                <% end %>
+
+                <% if (request.fullpath == '/two/index') %>
+                  <% root_path %>
+                    <li class='active' >
+                      <%= link_to 'Two', two_index_url %>
+                    </li> 
+                  <% else %>
+                    <li >
+                      <%= link_to 'Two', two_index_url %>
+                    </li> 
+                <% end %>
+
+                <% if (request.fullpath == '/three/index') %>
+                  <% root_path %>
+                    <li class='active' >
+                      <%= link_to 'Three', three_index_url %>
+                    </li> 
+                  <% else %>
+                    <li >
+                      <%= link_to 'Three', three_index_url %>
+                    </li> 
+                <% end %>
+
+              </ul>
+            </div><!-- /.navbar-collapse -->
+          </div><!-- /.container-fluid -->
+        </nav>
     <%= yield %>
   </body>
 </html>
