--- a/app/views/test/test.html.erb
+++ b/app/views/test/test.html.erb
@@ -1,2 +1,9 @@
-<h1>Test#test</h1>
-<p>Find me in app/views/test/test.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+        
+      <%= image_tag("rails_welcome.png") %>
+
+    </div>
+  </div>
+</div>
