Add four controller with view and route

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,7 +45,7 @@
                   </li>
                 <% root_path %>
                 <li class=<%=(request.fullpath == '/four/index') ? "active" : "" %> >
-                  <%= link_to 'Four', three_index_url %>
+                  <%= link_to 'Four', four_index_url %>
                 </li>
               </ul>
             </div><!-- /.navbar-collapse -->
