Add table generation function

--- a/app/views/four/index.erb
+++ b/app/views/four/index.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-12">
-      <%=eval(2,3, '/')%>
+      <%=getTable(10,10, '#fca')%>
     </div>
   </div>
 </div>
