--- a/app/assets/stylesheets/four.scss
+++ b/app/assets/stylesheets/four.scss
@@ -6,3 +6,15 @@
   margin-top: 50px ;
   padding: 50px ;
 }
+
+table.table.multiTable th {
+  text-align: center;
+  font-weight: bold;
+  background: #fff;
+}
+
+table.table.multiTable tr > td:nth-of-type(1){
+  text-align: center;
+  background: #fff;
+  font-weight: bold;
+}
