--- a/app/views/four/index.html.erb
+++ b/app/views/four/index.html.erb
@@ -6,15 +6,15 @@
             <p>Find me in app/views/four/index.html.erb</p>
             
             <div class="well well-sm">
-                <%= eval(2,3, '/') %>
+                <%= sum(1,2,3,4,5,6,7,8,9) %>
             </div>
 
             <div class="well well-sm">
-
+              <%= eval(2,3, '/') %>
             </div>
 
             <div class="well well-sm">
-
+              <%=getTable(10,10, '#fca')%>
             </div>
 
             <div class="well well-sm">
