--- a/app/views/four/index.html.erb
+++ b/app/views/four/index.html.erb
@@ -18,7 +18,7 @@
             </div>
 
             <div class="well well-sm">
-
+              <%= getMenu(@menu) %>
             </div>
 
             <div class="well well-sm">
