--- a/app/views/four/index.html.erb
+++ b/app/views/four/index.html.erb
@@ -10,7 +10,7 @@
             </div>
 
             <div class="well well-sm">
-              <%= eval(2,3, '/') %>
+              <%= eval(2,3, '*') %>
             </div>
 
             <div class="well well-sm">
