Add vertical menu in getMenu function, lab 4 complete

--- a/app/views/four/index.html.erb
+++ b/app/views/four/index.html.erb
@@ -18,7 +18,7 @@
             </div>
 
             <div class="well well-sm">
-              <%= getMenu(@menu) %>
+              <%= getMenu(@menu, 'vertical') %>
             </div>
 
             <div class="well well-sm">
