--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,6 +47,9 @@
                 <li class=<%=(request.fullpath == '/four/index') ? "active" : "" %> >
                   <%= link_to 'Four', four_index_url %>
                 </li>
+                <li class=<%=(request.fullpath == '/five/index') ? "active" : "" %> >
+                  <%= link_to 'Five', five_index_url %>
+                </li>
               </ul>
             </div><!-- /.navbar-collapse -->
           </div><!-- /.container-fluid -->
