Add container in five lab

--- a/app/views/five/index.html.erb
+++ b/app/views/five/index.html.erb
@@ -1,2 +1,9 @@
-<h1>Five#index</h1>
-<p>Find me in app/views/five/index.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12 bg-info">
+      <h1>Five#index</h1>
+      <p>Find me in app/views/five/index.html.erb</p>
+
+    </div>
+  </div>
+</div>
