Fix four ex, complete additional ex

--- a/app/views/four/index.html.erb
+++ b/app/views/four/index.html.erb
@@ -14,15 +14,15 @@
             </div>
 
             <div class="well well-sm">
-              <%=getTable(10,10, '#fca')%>
+              <%=getTable(5,10, '#fca')%>
             </div>
 
             <div class="well well-sm">
-              <%= getMenu(@menu, 'vertical') %>
+              <%= getMenu(@menu) %>
             </div>
 
             <div class="well well-sm">
-
+              <%= listRenderer(@menu) %>
             </div>
 
         </div>
