Change five lab progress

--- a/app/views/five/index.html.erb
+++ b/app/views/five/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12 bg-info">
-      <h1>Five#index</h1>
+      <h1>Five#index <span class="label label-warning">In Progress</span></h1>
       <p>Find me in app/views/five/index.html.erb</p>
 
     </div>
