Create model "form", required that

--- a/app/views/five/index.html.erb
+++ b/app/views/five/index.html.erb
@@ -29,19 +29,25 @@
                 <%= radio_button_tag(:age, "child") %>
                 <%= label_tag(:age_child, "I am younger than 21") %>
                 <%= radio_button_tag(:age, "adult") %>
-                <%= label_tag(:age_adult, "I'm over 21") %> -->
+                <%= label_tag(:age_adult, "I'm over 21") %> 
               </p>
     
               <%= submit_tag("Search") %>
             <% end %>
+
           </div>
+
           <div class="col-md-6">
             <p>пользовательский выбор</p>
-          </div>
-        </div>
+            <!-- <p></p>
+            <p></p>
+            <p></p>
+            <p></p> -->
 
+          </div>
+
+        </div>
       </div>
 
     </div>
   </div>
-</div>
