Update model, controller for five lab

--- a/app/views/five/index.html.erb
+++ b/app/views/five/index.html.erb
@@ -39,10 +39,13 @@
 
           <div class="col-md-6">
             <p>пользовательский выбор</p>
-            <!-- <p></p>
+            <p><%= @input %></p>
+            <p><%= @textarea %></p>
+            <p><%= @checkbox %></p>
+            <p><%= @radio %></p>
             <p></p>
             <p></p>
-            <p></p> -->
+            <p></p> 
 
           </div>
 
