--- a/app/views/login/index.html.erb
+++ b/app/views/login/index.html.erb
@@ -1,2 +1,24 @@
-<h1>Login#index</h1>
-<p>Find me in app/views/login/index.html.erb</p>
+<div class="container">
+  <div class="row">
+      <div class="col-xs-12 bg-info">
+        <h1>Login#index <span class="label label-warning">In Progress</span></h1>
+        <p>Find me in app/views/login/index.html.erb</p>
+          
+        <hr/ >
+          
+        <div class="well well-sm">
+          <%= form_tag login_index_path do %>
+            <p>
+              <%= text_field_tag(:email, 'Email') %>
+            </p>
+            <p>
+              <%= text_field_tag(:plainpassword, 'Plain Password') %>
+            </p>     
+          <%= submit_tag("Login") %>
+        <% end %>
+      </div>
+
+    </div>
+
+  </div>
+</div>
